syntax = "proto3";

message BoolData {
    string group_name = 1;
    int64 data_timestamp = 2;
    repeated bool scaled_data = 3;
    repeated bool raw_data = 4;
    uint32 names_crc = 5;
}
